# tasks_with_test

./: README.md
olexanderzhelezniy_at_gmail.com-prata-c1/project/02-setting.out.to.cpp/: Makefile  prata-c1-02.cpp  prata-c1-02.h  prata-c1-02_gTest.cpp
olexanderzhelezniy_at_gmail.com-prata-c1/project/03-dealing.with.data/: Makefile  prata-c1-03.cpp  prata-c1-03.h  prata-c1-03_gTest.cpp
olexanderzhelezniy_at_gmail.com-prata-c1/project/04-compound.types/: Makefile  prata-c1-04.cpp  prata-c1-04.h  prata-c1-04_gTest.cpp
olexanderzhelezniy_at_gmail.com-prata-c1/project/05-loops.and.relational.expressions/: CMakeLists.txt  Makefile  prata-c1-05.cpp  prata-c1-05.h  prata-c1-05_gTest.cpp
